--- a/index.html
+++ b/index.html
@@ -59,11 +59,11 @@
                             <p class="l-txt">
                                 <span>Leader </span> dans la fabrication <br>de boîtes pâtissières.
                             </p>
-                            <img class="point__banner l-point" src=".\img\Points.png" alt="bemapack" title="bemapack"/>
+                            <img class="point__banner l-point" src=".\img\Points2x.png" alt="bemapack" title="bemapack"/>
                             <div class="l-btn ">
-                                <p class="crl--blue ">
-                                    <a class="btn btn__banner " href="catalogue.html">Notre catalogue</a>
-                                    <span class="blue l-detail"></span>Nous pouvons vous aider <br>à réaliser vos idées.
+                                <a class="btn btn__banner " href="catalogue.html">Notre catalogue</a>
+                                <p>
+                                    <span class="crl--blue "></span>Nous pouvons vous aider <br>à réaliser vos idées.
                                 </p>
                             </div>
                         </div>
