--- a/index.html
+++ b/index.html
@@ -56,16 +56,15 @@
                             <img class=" l-img " src=".\img\presentation-banner-debonne.png" alt="bemapack" title="bemapack"/>
                             <img class="l-logo-lg" src=".\img\Bemapack.png" alt="logo-bemapack" title="logo-bemapack"/>
                             <img class="l-txt--liner" src=".\img\logo-boite.png" alt="bemapack" title="bemapack"/>
+                            <img class="point__banner l-point" src=".\img\Points2x.png" alt="bemapack" title="bemapack"/>
+                            <div class="crl--blue">
+                                <a class="btn btn__banner " href="catalogue.html">Notre catalogue</a>
+                                <p><span class="blue"></span>Nous pouvons vous aider <br>à réaliser vos idées.</p>
+                            </div>
                             <p class="l-txt">
                                 <span>Leader </span> dans la fabrication <br>de boîtes pâtissières.
                             </p>
-                            <img class="point__banner l-point" src=".\img\Points2x.png" alt="bemapack" title="bemapack"/>
-                            <div>
-                                <p class="crl--blue">
-                                    <a class="btn btn__banner " href="catalogue.html">Notre catalogue</a>
-                                    <span class="blue"></span>Nous pouvons vous aider <br>à réaliser vos idées.
-                                </p>
-                            </div>
+
                         </div>
                     
                     </div>
