fin CARD1 Réalisation

--- a/realisations.html
+++ b/realisations.html
@@ -72,11 +72,13 @@
 
       <div class="grid-containerAmoi lime yellow">
 
-        <div class="item-1 bordure">La pâtisserie confiserie <span> Croquantine</span>
+        <div class="item-1 bordure">
+
+          <h2> La pâtisserie confiserie <span> Croquantine</span></h2>
         </div>
 
         <div class="item-2 backimage bordure">
-          qu'en est-il du post <b> 2</b> ?
+          <p> Il est post <b> 2</b></p>
           <img src="img/Points.png" alt="points" />
 
           <div class="coverimage">
@@ -109,12 +111,12 @@
         </div>
 
         <div class="item-5 backimage-second  bordure">
-          <p>j'ai pour ce post 5555 la solution YEP !</p>
-          <img src="Points.png" alt="points" />
+          <p>j'ai 5555 la solution pour ce post YEP !</p>
+          <img src="img/Points.png" alt="points" />
 
           <div class="coverimage-second ">
             <div class="coverrelatif-second">
-              <img src="P-42.png" alt="grand Croquantine" />
+              <img src="img/P-42.png" alt="grand Croquantine" />
             </div>
           </div>
 
@@ -146,8 +148,8 @@
   <footer>
     <div class="l-container">
 
-      <div class="bordure"></div>
-
+      <!--  <div class="bordure"></div>
+!-->
       <div class="section__footer--left">
         <h1>Plan du Site</h1>
         <br />
