--- a/realisations.html
+++ b/realisations.html
@@ -66,78 +66,81 @@
         </div>
 
       </div>
+    </div>
 
       <!-- section realisations -->
+      <div class="wrap">
 
-      <div class="grid-containerAmoi lime yellow">
+        <div class="grid-containerAmoi lime yellow">
 
-        <div class="item-1 bordure">
+          <div class="item-1 bordure">
 
-          <h2> La pâtisserie confiserie <span> Croquantine</span></h2>
-        </div>
-
-        <div class="item-2 backimage bordure">
-          <p> Il est post <b> 2</b></p>
-          <img src="img/Points.png" alt="points" />
-
-          <div class="coverimage">
-            <div class="coverrelatif">
-              <img src="img/P-13.png" alt="grand Croquantine" />
-            </div>
-          </div>
-          <div class="coverimage-ter">
-            <div class="coverrelatif-ter">
-              <img src="img/P-13.png" alt="grand Croquantine" />
-
-            </div>
+            <h2> La pâtisserie confiserie <span> Croquantine</span></h2>
           </div>
 
+          <div class="item-2 backimage bordure">
+            <p> Il est post <b> 2</b></p>
+            <img src="img/Points.png" alt="points" />
 
-          =======
-        </div>
-
-
-        <div class="item-3 bordure">La patisserie (3), boulangerie et confiserie Croquantine voulait un Lorem ipsum
-          dolor
-          sit
-          amet
-          consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates rem
-          facere
-          .
-        </div>
-
-
-        <div class="item-4 bordure">LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus
-          aliquam
-          provident
-          cumque. Harum quasi aperiam deserunt.
-        </div>
-
-        <div class="item-5 backimage-second  bordure">
-          <p>j'ai 5555 la solution pour ce post YEP !</p>
-          <img src="img/Points.png" alt="points" />
-
-          <div class="coverimage-second ">
-            <div class="coverrelatif-second">
-              <img src="img/P-42.png" alt="grand Croquantine" />
+            <div class="coverimage">
+              <div class="coverrelatif">
+                <img src="img/P-13.png" alt="grand Croquantine" />
+              </div>
             </div>
+            <div class="coverimage-ter">
+              <div class="coverrelatif-ter">
+                <img src="img/P-13.png" alt="grand Croquantine" />
+
+              </div>
+            </div>
+
+
+            =======
+          </div>
+
+
+          <div class="item-3 bordure">La patisserie (3), boulangerie et confiserie Croquantine voulait un Lorem ipsum
+            dolor
+            sit
+            amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates rem
+            facere
+            .
+          </div>
+
+
+          <div class="item-4 bordure">LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus
+            aliquam
+            provident
+            cumque. Harum quasi aperiam deserunt.
+          </div>
+
+          <div class="item-5 backimage-second  bordure">
+            <p>j'ai 5555 la solution pour ce post YEP !</p>
+            <img src="img/Points.png" alt="points" />
+
+            <div class="coverimage-second ">
+              <div class="coverrelatif-second">
+                <img src="img/P-42.png" alt="grand Croquantine" />
+              </div>
+            </div>
+
+          </div>
+
+
+
+          <div class="item-6 bordure">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores
+            ducimus
+            odio
+            accusamus
+            corporis, unde alias similique totam perspiciatis ad iste sint tenetur deleniti maxime tempora atque
+            consequatur
+            accusantium aperiam.
           </div>
 
         </div>
-
-
-
-        <div class="item-6 bordure">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores
-          ducimus
-          odio
-          accusamus
-          corporis, unde alias similique totam perspiciatis ad iste sint tenetur deleniti maxime tempora atque
-          consequatur
-          accusantium aperiam.
-        </div>
-
-      </div>
-
+      
+    </div>
 
       <!--  FIN Bemapack partie 1 -->
 
