--- a/realisations.html
+++ b/realisations.html
@@ -77,12 +77,12 @@
 
         <div class="item-1 bordure ">
 
-          <h2 title__primary> La pâtisserie confiserie <span> Croquantine</span></h2>
+          <h2 class="title__primary2"> La pâtisserie confiserie <span> Croquantine</span></h2>
         </div>
 
         <div class="item-2 backimage bordure">
           <p> Il est post <b> 2</b></p>
-          <img src="img/Points.png" alt="points" />
+          <img src="img/img-realisations/section-1/left.png" alt="left" />
 
           <div class="coverimage">
             <div class="coverrelatif">
@@ -96,8 +96,6 @@
             </div>
           </div>
 
-
-          =======
         </div>
 
 
