--- a/realisations.html
+++ b/realisations.html
@@ -82,7 +82,7 @@
 
         <div class="item-2 backimage bordure">
           <p> Il est post <b> 2</b></p>
-          <img src="img/img-realisations/section-1/left.png" alt="left" />
+          <img src="img/img-realisations/section-1/left.png" alt="leftsection1" />
 
           <div class="coverimage">
             <div class="coverrelatif">
