image cover et back

--- a/realisations.html
+++ b/realisations.html
@@ -117,7 +117,7 @@
 
         <div class="item-5 backimage-second  bordure">
           <p>j'ai 5555 la solution pour ce post YEP !</p>
-          <img src="img/Points.png" alt="points" />
+          <img src="img/img-realisations/section-1/right.png" alt="points" />
 
           <div class="coverimage-second ">
             <div class="coverrelatif-second">
