--- a/realisations.html
+++ b/realisations.html
@@ -48,20 +48,26 @@
     <div class="l-wrapper">
 
       <!--section banner -->
-      <div class="l-section__banner">
+      <div class="l-section__banner--realisation">
 
         <div class="l-banner ">
           <img class="l-banner-img " src=".\img\background-header.png" alt="logo-bemapack" title="logo-bemapack" />
-          <img class=" l-img " src=".\img\presentation-banner-debonne.png" alt="bemapack" title="bemapack" />
+          <img class=" l-img " src=".\img\cadre-rea.png" alt="bemapack" title="bemapack" />
+          <h2 class= "title__primary">Découvrez nos <span>réalisations</span></h2>
           <img class="l-logo-lg" src=".\img\Bemapack.png" alt="logo-bemapack" title="logo-bemapack" />
-          <img class="l-txt--liner" src=".\img\logo-boite.png" alt="bemapack" title="bemapack" />
           <img class="point__banner l-point" src=".\img\Points2x.png" alt="bemapack" title="bemapack" />
           <div class="crl--blue">
             <a class="btn btn__banner " href="catalogue.html">Notre catalogue</a>
             <p><span class="blue"></span>Nous pouvons vous aider <br>à réaliser vos idées.</p>
           </div>
           <p class="l-txt">
-            <span>Leader </span> dans la fabrication <br>de boîtes pâtissières.
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
+            sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
+            
+            <br><br>Lorem ipsum dolor sit amet, consetetur sadipscing 
+            elitr, sed diam nonumy eirmod tempor invidunt ut 
+            labore et dolore magna aliquyam 
+            
           </p>
 
         </div>
