--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                         </div>
 
                         <div class="content__logo">
-                            <img class="logo__partners" src=".\img\boulangerie-maison-thirion.png" href="realisations.html" alt="maison-thirion"/>
+                            <img class="logo__partners" src=".\img\boulangerie-maison-thirion.png"  alt="maison-thirion"/>
                             <img class="logo__partners" src=".\img\boulangerie-humblet.png" alt="humblet"/>
                             <img class="logo__partners" src=".\img\boulangerie-grainedevie.png" alt="grainedevie"/>
                             <img class="logo__partners" src=".\img\entete.png" alt="entete" />
