--- a/realisations.html
+++ b/realisations.html
@@ -53,7 +53,7 @@
         <div class="l-banner ">
           <img class="l-banner-img " src=".\img\background-header.png" alt="logo-bemapack" title="logo-bemapack" />
           <img class=" l-img " src=".\img\cadre-rea.png" alt="bemapack" title="bemapack" />
-          <h2 class= "title__primary">Découvrez nos <span>réalisations</span></h2>
+          <h2 class="title__primary">Découvrez nos <span>réalisations</span></h2>
           <img class="l-logo-lg" src=".\img\Bemapack.png" alt="logo-bemapack" title="logo-bemapack" />
           <img class="point__banner l-point" src=".\img\Points2x.png" alt="bemapack" title="bemapack" />
           <div class="crl--blue">
@@ -61,13 +61,13 @@
             <p><span class="blue"></span>Nous pouvons vous aider <br>à réaliser vos idées.</p>
           </div>
           <p class="l-txt">
-            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, 
-            sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, 
-            
-            <br><br>Lorem ipsum dolor sit amet, consetetur sadipscing 
-            elitr, sed diam nonumy eirmod tempor invidunt ut 
-            labore et dolore magna aliquyam 
-            
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+            sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+
+            <br><br>Lorem ipsum dolor sit amet, consetetur sadipscing
+            elitr, sed diam nonumy eirmod tempor invidunt ut
+            labore et dolore magna aliquyam
+
           </p>
 
         </div>
@@ -77,7 +77,7 @@
     </div>
 
     <!-- section realisations -->
-    <div class="m-wrap green">
+    <div class="m-wrap green realisation">
 
       <div class="grid-containerAmoi lime yellow">
 
@@ -87,7 +87,7 @@
         </div>
 
         <div class="item-2 backimage bordure">
-          <p> Il est post <b> 2</b></p>
+
           <img src="img/img-realisations/section-1/left.png" alt="leftsection1" />
 
           <div class="coverimage">
@@ -105,24 +105,22 @@
         </div>
 
 
-        <div class="item-3 bordure">La patisserie (3), boulangerie et confiserie Croquantine voulait un Lorem ipsum
-          dolor
-          sit
-          amet
-          consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates rem
-          facere
-          .
+        <div class="item-3 bordure">
+          <p>La patisserie, boulangerie et confiserie Croquantine voulait un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            facere
+          </p>
         </div>
 
 
-        <div class="item-4 bordure">LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus
-          aliquam
-          provident
-          cumque. Harum quasi aperiam deserunt.
+        <div class="item-4 bordure">
+          <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
+            Harum quasi aperiam deserunt.
+          </p>
         </div>
 
         <div class="item-5 backimage-second  bordure">
-          <p>j'ai 5555 la solution pour ce post YEP !</p>
+
           <img src="img/img-realisations/section-1/right.png" alt="points" />
 
           <div class="coverimage-second ">
@@ -135,20 +133,20 @@
 
 
 
-        <div class="item-6 bordure">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores
-          ducimus
-          odio
-          accusamus
-          corporis, unde alias similique totam perspiciatis ad iste sint tenetur deleniti maxime tempora atque
-          consequatur
-          accusantium aperiam.
+        <div class="item-6 bordure">
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores ducimus odio
+            accusamus corporis, unde alias similique totam perspiciatis ad iste sint tenetur deleniti maxime tempora
+            atque
+            consequatur accusantium aperiam.
+          </p>
         </div>
 
       </div>
+      <!--  FIN Bemapack partie 1 -->
 
     </div>
 
-    <!--  FIN Bemapack partie 1 -->
+
 
 
 
