HTML Section2 REALISATION

--- a/realisations.html
+++ b/realisations.html
@@ -112,7 +112,6 @@
           </p>
         </div>
 
-
         <div class="item-4 bordure">
           <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
             Harum quasi aperiam deserunt.
@@ -120,18 +119,13 @@
         </div>
 
         <div class="item-5 backimage-second  bordure">
-
           <img src="img/img-realisations/section-1/right.png" alt="points" />
-
           <div class="coverimage-second ">
             <div class="coverrelatif-second">
               <img src="img/P-42.png" alt="grand Croquantine" />
             </div>
           </div>
-
         </div>
-
-
 
         <div class="item-6 bordure">
           <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Placeat asperiores ducimus odio
@@ -143,6 +137,64 @@
 
       </div>
       <!--  FIN Bemapack partie 1 -->
+      <!-- Début Réalisation partie 2 -->
+      <div class="grid-containerAmoi2 lime yellow">
+
+        <div class="item-21 bordure ">
+          <h2 class="title__primary2"> l'établissement <span> Gourmandine</span></h2>
+        </div>
+
+        <div class="item-22 bordure">
+          <p>La patisserie, Gourmandise voulait un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            facere
+          </p>
+        </div>
+
+        <div class="item-23 backimage2 bordure">
+          <img src="img/img-realisations/section-2/middle.png" alt="middle-section2" />
+          <div class="coverimage2middle">
+            <div class="coverrelatif">
+              <img src="img/P-3.png" alt="boite bleu gourmandise" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-24 bordure">
+          <p> Lorem Croquantine DROITE ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            facere
+          </p>
+        </div>
+
+        <div class="item-25 backimage-second  bordure">
+          <img src="img/img-realisations/section-2/right.png" alt="points" />
+          <div class="coverimage-second2right ">
+            <div class="coverrelatif-second2right">
+              <img src="img/P-42.png" alt="grand Croquantine" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-26 backimage-second2left  bordure">
+          <img src="img/img-realisations/section-2/left.png" alt="points" />
+          <div class="coverimage-second ">
+            <div class="coverrelatif-second2left">
+              <img src="img/P-42.png" alt="grand Croquantine" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-27 bordure">
+          <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
+            Harum quasi aperiam deserunt.
+          </p>
+        </div>
+
+
+      </div>
+      <!--  FIN Bemapack partie 2 -->
+
 
     </div>
 
