--- a/realisations.html
+++ b/realisations.html
@@ -154,14 +154,14 @@
         <div class="item-23 backimage2 bordure">
           <img src="img/img-realisations/section-2/middle.png" alt="middle-section2" />
           <div class="coverimage2middle">
-            <div class="coverrelatif">
+            <div class="coverrelatif2">
               <img src="img/P-3.png" alt="boite bleu gourmandise" />
             </div>
           </div>
         </div>
 
         <div class="item-24 bordure">
-          <p> Lorem Croquantine DROITE ipsum dolor sit amet
+          <p> Lorem Croquantine DROITE (4) ipsum dolor sit amet
             consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
             facere
           </p>
