--- a/realisations.html
+++ b/realisations.html
@@ -79,17 +79,16 @@
     <!-- section realisations -->
     <div class="m-wrap green realisation">
 
+
+      <!-- début SECTION1 -->
       <div class="grid-containerAmoi lime yellow">
 
         <div class="item-1 bordure ">
-
           <h2 class="title__primary2"> La pâtisserie confiserie <span> Croquantine</span></h2>
         </div>
 
         <div class="item-2 backimage bordure">
-
           <img src="img/img-realisations/section-1/left.png" alt="leftsection1" />
-
           <div class="coverimage">
             <div class="coverrelatif">
               <img src="img/P-13.png" alt="grand Croquantine" />
@@ -98,12 +97,9 @@
           <div class="coverimage-ter">
             <div class="coverrelatif-ter">
               <img src="img/P-13.png" alt="grand Croquantine" />
-
             </div>
           </div>
-
         </div>
-
 
         <div class="item-3 bordure">
           <p>La patisserie, boulangerie et confiserie Croquantine voulait un Lorem ipsum dolor sit amet
@@ -136,8 +132,10 @@
         </div>
 
       </div>
+
       <!--  FIN Bemapack partie 1 -->
-      <!-- Début Réalisation partie 2 -->
+
+      <!-- DEBUT Section2 -->
       <div class="grid-containerAmoi2 lime yellow">
 
         <div class="item-21 bordure ">
@@ -161,7 +159,7 @@
         </div>
 
         <div class="item-24 bordure">
-          <p> Lorem Croquantine DROITE (4) ipsum dolor sit amet
+          <p> Lorem Croquantine DROITE ipsum dolor sit amet
             consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
             facere
           </p>
@@ -191,15 +189,72 @@
           </p>
         </div>
 
+      </div>
+
+      <!--  FIN Bemapack Réalisation partie 2 -->
+
+      <!-- Début Réalisation partie 3 -->
+      <div class="grid-containerAmoi3 lime yellow">
+
+        <div class="item-21 bordure ">
+          <h2 class="title__primary2"> l'établissement <span> Menar Gourmandine</span></h2>
+        </div>
+
+        <div class="item-22 bordure">
+          <p>La patisserie, Gourmandise voulait un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            facere
+          </p>
+        </div>
+
+        <div class="item-23 backimage2 bordure">
+          <img src="img/img-realisations/section-2/middle.png" alt="middle-section2" />
+          <div class="coverimage2middle">
+            <div class="coverrelatif2">
+              <img src="img/P-3.png" alt="boite bleu gourmandise" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-22 bordure">
+          <p>La patisserie, Gourmandise voulait un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            facere
+          </p>
+        </div>
+
+        <div class="item-25 backimage-second2right  bordure">
+          <img src="img/img-realisations/section-2/right.png" alt="points" />
+          <div class="coverimage-second2right ">
+            <div class="coverrelatif-second2right">
+              <img src="img/P-42.png" alt="grand Croquantine" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-26 backimage-second2left  bordure">
+          <img src="img/img-realisations/section-2/left.png" alt="points" />
+          <div class="coverimage-second ">
+            <div class="coverrelatif-second2left">
+              <img src="img/P-42.png" alt="grand Croquantine" />
+            </div>
+          </div>
+        </div>
+
+        <div class="item-27 bordure">
+          <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
+            Harum quasi aperiam deserunt.
+          </p>
+        </div>
 
       </div>
-      <!--  FIN Bemapack partie 2 -->
+      <!--  FIN Bemapack Réalisation partie 3 -->
 
+      <!-- Début Réalisation partie 4 -->
+
+      <!--  FIN Bemapack Réalisation partie 4 -->
 
     </div>
-
-
-
 
 
 
@@ -207,6 +262,7 @@
 
 
   </main>
+
   <footer>
 
     <div class="l-footer">
