Mise en place IMAGE et BACKIMAGE section3

--- a/realisations.html
+++ b/realisations.html
@@ -184,7 +184,8 @@
         </div>
 
         <div class="item-27 bordure">
-          <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
+          <p>LOREM, IPSUM DOLOR SIT amet - - 7 - - consectetur adipisicing elit. Corporis quae doloribus aliquam
+            provident cumque.
             Harum quasi aperiam deserunt.
           </p>
         </div>
@@ -196,35 +197,37 @@
       <!-- Début Réalisation partie 3 -->
       <div class="grid-containerAmoi3 lime yellow">
 
-        <div class="item-21 bordure ">
+        <div class="item-31 bordure ">
           <h2 class="title__primary2"> l'établissement <span> Menar Gourmandine</span></h2>
         </div>
 
-        <div class="item-22 bordure">
-          <p>La patisserie, Gourmandise voulait un Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
-            facere
+        <div class="item-32 bordure">
+          <p>La patisserie, Menar Gourmandise recherchait un nouveau packaging un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates
+            rfacere
           </p>
         </div>
 
-        <div class="item-23 backimage2 bordure">
-          <img src="img/img-realisations/section-2/middle.png" alt="middle-section2" />
-          <div class="coverimage2middle">
+        <div class="item-33 backimage2 bordure">
+          <img src="img/img-realisations/section-3/middle.png" alt="points-middel" />
+          <div class="coverimage3middle">
             <div class="coverrelatif2">
+              <p>image3</p>
               <img src="img/P-3.png" alt="boite bleu gourmandise" />
             </div>
           </div>
         </div>
 
-        <div class="item-22 bordure">
-          <p>La patisserie, Gourmandise voulait un Lorem ipsum dolor sit amet
-            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+        <div class="item-34 bordure">
+          <p>La patisserie Gourmandise (4) voulait un Lorem ipsum dolor sit amet
+            consectetur adipisicing elit. Reprehenderit error doloribus illum, (4) sequi enim quae tempore voluptates re
             facere
           </p>
         </div>
 
-        <div class="item-25 backimage-second2right  bordure">
-          <img src="img/img-realisations/section-2/right.png" alt="points" />
+        <div class="item-35 backimage-second2right  bordure">
+          <p>image5</p>
+          <img src="img/img-realisations/section-3/right.png" alt="shadow-right" />
           <div class="coverimage-second2right ">
             <div class="coverrelatif-second2right">
               <img src="img/P-42.png" alt="grand Croquantine" />
@@ -232,17 +235,19 @@
           </div>
         </div>
 
-        <div class="item-26 backimage-second2left  bordure">
-          <img src="img/img-realisations/section-2/left.png" alt="points" />
+        <div class="item-36 backimage-second3left  bordure">
+          <p>image6</p>
+          <img src="img/img-realisations/section-3/left.png" alt="shadow-left" />
           <div class="coverimage-second ">
-            <div class="coverrelatif-second2left">
+            <div class="coverrelatif-second3left">
               <img src="img/P-42.png" alt="grand Croquantine" />
             </div>
           </div>
         </div>
 
-        <div class="item-27 bordure">
-          <p>LOREM, IPSUM DOLOR SIT amet consectetur adipisicing elit. Corporis quae doloribus aliquam provident cumque.
+        <div class="item-37 bordure">
+          <p>LOREM, IPSUM DOLOR SIT amet [7] consectetur adipisicing elit. Corporis quae doloribus aliquam provident
+            cumque.
             Harum quasi aperiam deserunt.
           </p>
         </div>
