responsive Pt Tablette 530px

--- a/realisations.html
+++ b/realisations.html
@@ -160,7 +160,8 @@
 
         <div class="item-24 bordure">
           <p> Lorem Croquantine DROITE ipsum dolor sit amet
-            consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates re
+            consectetur adipisicing elit. (2-4) Reprehenderit error doloribus illum, sequi enim quae tempore voluptates
+            re
             facere
           </p>
         </div>
@@ -202,13 +203,13 @@
         </div>
 
         <div class="item-32 bordure">
-          <p>La patisserie, Menar Gourmandise recherchait un nouveau packaging un Lorem ipsum dolor sit amet
+          <p>La patisserie, Menar Gourmandise recherchait un nouveau packaging ((3 -2)) un Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Reprehenderit error doloribus illum, sequi enim quae tempore voluptates
             rfacere
           </p>
         </div>
 
-        <div class="item-33 backimage2 bordure">
+        <div class="item-33 backimage3 bordure">
           <img src="img/img-realisations/section-3/middle.png" alt="points-middel" />
           <div class="coverimage3middle">
             <div class="coverrelatif2">
@@ -219,7 +220,7 @@
         </div>
 
         <div class="item-34 bordure">
-          <p>La patisserie Gourmandise (4) voulait un Lorem ipsum dolor sit amet
+          <p>La patisserie Gourmandise (3-4) voulait un Lorem ipsum dolor sit amet
             consectetur adipisicing elit. Reprehenderit error doloribus illum, (4) sequi enim quae tempore voluptates re
             facere
           </p>
