--- a/realisations.html
+++ b/realisations.html
@@ -62,11 +62,10 @@
           </div>
           <p class="l-txt">
             Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-            sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat,
+            sed diam nonumy eirmod tempor invidunt ut labore.
 
             <br><br>Lorem ipsum dolor sit amet, consetetur sadipscing
-            elitr, sed diam nonumy eirmod tempor invidunt ut
-            labore et dolore magna aliquyam
+            elitr,labore et dolore magna aliquyam
 
           </p>
 
