--- a/catalogue.html
+++ b/catalogue.html
@@ -89,7 +89,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="../img/p-13.png" alt="new-arrivals images">
+                                            <img src="./img/P-13.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="sale bg-1">
                                                 <p>    </p>
@@ -112,7 +112,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-3.png" alt="new-arrivals images">
+                                            <img src="./img/P-3.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="sale bg-2">
                                                 <p>    </p>
@@ -135,7 +135,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-13.png" alt="new-arrivals images">
+                                            <img src="./img/P-13.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="new-arrival-cart">
                                                 <p>
@@ -155,7 +155,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-18.png" alt="new-arrivals images">
+                                            <img src="./img/P-18.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="sale bg-1">
                                                 <p>    </p>
@@ -178,7 +178,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-3.png" alt="new-arrivals images">
+                                            <img src="./img/P-3.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="new-arrival-cart">
                                                 <p>
@@ -198,7 +198,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-18.png" alt="new-arrivals images">
+                                            <img src="./img/P-18.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="sale bg-1">
                                                 <p>    </p>
@@ -221,7 +221,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-13.png" alt="new-arrivals images">
+                                            <img src="./img/P-13.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="sale bg-2">
                                                 <p>    </p>
@@ -244,7 +244,7 @@
                                 <div class="col-md-3 col-sm-4">
                                     <div class="single-new-arrival">
                                         <div class="single-new-arrival-bg">
-                                            <img src="./img/p-3.png" alt="new-arrivals images">
+                                            <img src="./img/P-3.png" alt="new-arrivals images">
                                             <div class="single-new-arrival-bg-overlay"></div>
                                             <div class="new-arrival-cart">
                                                 <p>
